--- a/_posts/project/2015-07-23-Demo.md
+++ b/_posts/project/2015-07-23-Demo.md
@@ -45,19 +45,19 @@ introduction: Demo for the blog post
 <div class="col-1-2 col-offset-1-4 slider">
 	<ul id="sb-slider" class="sb-slider">
 		<li>
-			<img src="{{ 'images/project.jpeg' | prepend: site.baseurl }}" alt="image1">
+			<img src="{{ 'images/project/project.jpeg' | prepend: site.baseurl }}" alt="image1">
 			<div class="sb-description">
 				<h3>Example 1</h3>
 			</div>
 		</li>
 		<li>
-			<img src="{{ 'images/project.jpeg' | prepend: site.baseurl }}" alt="image1">
+			<img src="{{ 'images/project/project.jpeg' | prepend: site.baseurl }}" alt="image1">
 			<div class="sb-description">
 				<h3>Example 2</h3>
 			</div>
 		</li>
 		<li>
-			<img src="{{ 'images/project.jpeg' | prepend: site.baseurl }}" alt="image1">
+			<img src="{{ 'images/project/project.jpeg' | prepend: site.baseurl }}" alt="image1">
 			<div class="sb-description">
 				<h3>Example 3</h3>
 			</div>
