--- a/_posts/project/2015-07-23-Demo.md
+++ b/_posts/project/2015-07-23-Demo.md
@@ -69,7 +69,7 @@ introduction: Demo for the blog post
 	</div>
 </div>
 <div class="row col-1-2 col-offset-1-4 divide">
-	<img src="{{ 'images/component-line.jpeg' | prepend: site.baseurl }}" alt="image1">
+	<img src="{{ 'images/component-line.svg' | prepend: site.baseurl }}" alt="image1">
 </div>
 <div class="clean"></div>
 <div class="row component-3">
